@@ -39,7 +39,6 @@ extern "C" {
 /* map union members back */
 
 /* mutually exclusive */
-#define ev_next		_ev.ev_io.ev_next
 #define ev_signal_next	_ev.ev_signal.ev_signal_next
 
 /* used only by signals */
